--- a/FoodPin/Base.lproj/Main.storyboard
+++ b/FoodPin/Base.lproj/Main.storyboard
@@ -31,6 +31,11 @@
                                                         <constraint firstAttribute="height" constant="60" id="5Rg-1h-m9n"/>
                                                         <constraint firstAttribute="width" constant="60" id="xVN-ma-gK9"/>
                                                     </constraints>
+                                                    <userDefinedRuntimeAttributes>
+                                                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                            <integer key="value" value="8"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                    </userDefinedRuntimeAttributes>
                                                 </imageView>
                                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="m03-JB-SxH">
                                                     <rect key="frame" x="75" y="0.0" width="293" height="58.5"/>
