--- a/FoodPin/Base.lproj/Main.storyboard
+++ b/FoodPin/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -122,6 +123,7 @@
                                     <outlet property="nameLabel" destination="TVj-7I-AHi" id="hht-Mu-4Na"/>
                                     <outlet property="thumbnailImageView" destination="9SV-zB-OB2" id="yPr-1y-fvA"/>
                                     <outlet property="typeLabel" destination="Ws0-c6-g6v" id="8Pk-9S-RTq"/>
+                                    <segue destination="FRK-Bj-GqP" kind="show" id="esR-y3-ZtA"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -135,6 +137,33 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="we6-Y1-DBb" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1047.8260869565217" y="219.64285714285714"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="chJ-NK-so3">
+            <objects>
+                <viewController id="FRK-Bj-GqP" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="gIk-NR-rIa">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="3uZ-Gh-uIP">
+                                <rect key="frame" x="0.0" y="88" width="414" height="284"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="3uZ-Gh-uIP" firstAttribute="trailing" secondItem="bE5-f5-Ifv" secondAttribute="trailing" id="9jJ-nf-5JP"/>
+                            <constraint firstItem="3uZ-Gh-uIP" firstAttribute="leading" secondItem="bE5-f5-Ifv" secondAttribute="leading" id="GU8-X7-DbN"/>
+                            <constraint firstItem="3uZ-Gh-uIP" firstAttribute="top" secondItem="bE5-f5-Ifv" secondAttribute="top" id="ZgX-b8-yJR"/>
+                            <constraint firstItem="bE5-f5-Ifv" firstAttribute="bottom" secondItem="3uZ-Gh-uIP" secondAttribute="bottom" constant="490" id="csc-Z5-xfs"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="bE5-f5-Ifv"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="nN7-sF-PuV"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="WrE-SU-e7A" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1965.217391304348" y="219.64285714285714"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Akf-KE-lED">
