Добавил переменную для передачи порядкового номера ячейки indexPath.row в RecipeDetailViewController, а также хочу через нажатие на  @IBOutlet var backButton: UINavigationItem! передать в RecipesTableViewController значение recipeIsLiked - занесён рецепт в избранные или нет.

--- a/FoodPin/Base.lproj/Main.storyboard
+++ b/FoodPin/Base.lproj/Main.storyboard
@@ -204,6 +204,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="nN7-sF-PuV"/>
                     <connections>
+                        <outlet property="backButton" destination="nN7-sF-PuV" id="Gy9-9J-Rql"/>
                         <outlet property="ingredientsLabel" destination="g8h-6f-6Wp" id="9yl-vK-fQG"/>
                         <outlet property="recipeDescriptionLabel" destination="0pZ-6d-95a" id="x3y-fP-CXm"/>
                         <outlet property="recipeFaviritesIndicator" destination="9Dd-9K-0rm" id="Zvy-Z9-Lgr"/>
